--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_USER = postgres
 DB_PASSWORD = root
 DB_SERVER = localhost
 DB_PORT = 5432
+DATABASE_URL = postgresql-angular-22017
 
 // cloudinary
 CLOUD_NAME = "dy0xe124p"
