--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sell bitcoin and giftcards",
   "main": "index.js",
   "engines": {
-    "node": "12x"
+    "node": "12.16.0",
+    "npm": "6.13.7"
   },
   "scripts": {
     "server": "nodemon server",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "bitcoin-exchange-rate": "^1.3.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
@@ -31,7 +33,6 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
     "pg": "^7.18.2",
-    "popper.js": "^1.16.1",
     "request": "^2.88.2"
   }
 }
