--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "npm": "6.13.7"
   },
   "scripts": {
-    "server": "nodemon server",
-    "start": "node server"
+    "start": "PROD= true node server.js",
+    "postinstall": "cd ./client && npm",
+    "server": "nodemon server"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
