--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "PROD= true node server.js",
-    "postinstall": "cd ./client && npm",
+    "postinstall": "cd ./client && npm start",
     "server": "nodemon server"
   },
   "devDependencies": {
