--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "6.13.7"
   },
   "scripts": {
-    "start": "PROD=true node server.js",
+    "start": "PROD= true node server.js",
+    "postinstall": "cd ./client && npm",
     "server": "nodemon server"
   },
   "devDependencies": {
