--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "postinstall": "npm build"
+    "heroku-postbuild": "npm run build",
+    "dev": "react-scripts start"
   }
 }
