--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.13.7"
   },
   "scripts": {
-    "start": "PROD= true node server.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd ./client && npm install",
     "server": "nodemon server"
   },
