--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ DB_SERVER = localhost
 DB_PORT = 5432
 DATABASE_URL = postgresql-angular-22017
 
+PORT = 3006
+
 // cloudinary
 CLOUD_NAME = "dy0xe124p"
 API_KEY = "243875864777546"
