--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd ./client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "heroku-postbuild": "cd ./client && npm install --only=dev --no-shrinkwrap && npm run build",
     "server": "nodemon server"
   },
   "devDependencies": {
