--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "https://flashtoken.herokuapp.com",
-  "homepage": "https://flashtoken.herokuapp.com",
+  // "homepage": "https://flashtoken.herokuapp.com",
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
