--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-bootstrap": "^0.32.4",
