--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "flashtoken",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://flashtoken.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
