--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "knex": "^0.14.6",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
+    "nodemailer": "^6.4.10",
     "pg": "^7.18.2",
     "request": "^2.88.2"
   }
