added user dashboard

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
@@ -10,17 +14,22 @@
     "bootstrap": "^4.1.3",
     "chart.js": "^2.8.0",
     "chartist": "0.10.1",
+    "classnames": "2.2.6",
     "clsx": "^1.0.4",
     "fusioncharts": "^3.13.3",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
+    "nouislider": "14.1.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "0.13.3",
     "react-chartjs-2": "^2.7.6",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-datetime": "2.16.3",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "16.13.1",
     "react-fusioncharts": "^2.0.7",
     "react-google-maps": "9.4.5",
@@ -48,5 +57,15 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
     "dev": "react-scripts start"
+  },
+  "devDependencies": {
+    "@types/googlemaps": "3.39.2",
+    "@types/markerclustererplus": "2.1.33",
+    "@types/react": "16.9.19",
+    "eslint-plugin-flowtype": "3.13.0",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
+    "react-scripts": "^3.4.1",
+    "typescript": "3.7.5"
   }
 }
