--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DATABASE = testdb
 DB_USER = postgres
-DB_PASSWORD = root
+DB_PASSWORD = admin
 DB_SERVER = localhost
 DB_PORT = 5432
 DATABASE_URL = postgresql-angular-22017
@@ -20,4 +20,4 @@ SECRET_KEY = manuel
 ADMIN_EMAIL = admin@gmail.com
 ADMIN_PASSWORD = admin123
 
-TEST_TOKEN = generated token
+TEST_TOKEN = generated token 
