--- a/client/package.json
+++ b/client/package.json
@@ -37,11 +37,11 @@
     "react-number-format": "4.4.1",
     "react-particles-js": "^2.1.0",
     "react-perfect-scrollbar": "^1.5.3",
-    "react-phone-number-input": "^3.0.25",
     "react-router": "5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^6.0.8",
     "react-toggle": "4.0.2",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
