--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-router": "5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
+    "react-spinners": "^0.9.0",
     "react-tilt": "^0.1.4",
     "react-toastify": "^6.0.8",
     "react-toggle": "4.0.2",
