--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DATABASE = testdb
 DB_USER = postgres
-DB_PASSWORD = admin
+DB_PASSWORD = root
 DB_SERVER = localhost
 DB_PORT = 5432
 DATABASE_URL = postgresql-angular-22017
