--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "aos": "^2.3.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.8.0",
