--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-number-format": "4.4.1",
     "react-particles-js": "^2.1.0",
     "react-perfect-scrollbar": "^1.5.3",
+    "react-redux": "^7.2.1",
     "react-router": "5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
@@ -48,6 +49,9 @@
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.9.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
