--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.4.10",
     "pg": "^7.18.2",
-    "request": "^2.88.2"
+    "react-validation": "^3.0.7",
+    "request": "^2.88.2",
+    "validator": "^13.1.1"
   }
 }
