--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,9 @@
     "tachyons": "^4.9.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
