--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.4.10",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "pg": "^7.18.2",
     "react-validation": "^3.0.7",
     "request": "^2.88.2",
