--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DB_PASSWORD = root
 DB_SERVER = localhost
 DB_PORT = 5432
 DATABASE_URL = postgresql-angular-22017
+NODE_ENV = production
 
 PORT = 3006
 
