--- a/client/package.json
+++ b/client/package.json
@@ -43,20 +43,22 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
     "react-spinners": "^0.9.0",
+    "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4",
     "react-toastify": "^6.0.8",
     "react-toggle": "4.0.2",
     "react-transition-group": "^4.4.1",
+    "react-validation": "^3.0.7",
     "reactstrap": "^8.5.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
     "tachyons": "^4.9.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1",
-    "react-validation": "^3.0.7",
     "validator": "^13.1.1"
   },
   "scripts": {
